--- a/sources/less/includes/icon.less
+++ b/sources/less/includes/icon.less
@@ -36,7 +36,7 @@
 
 .icon_plus {
   width: 1.4rem;
-  height: 1.4rem;
+  height: 1.45rem;
 
   &.icon_white {
     &:after {
@@ -61,7 +61,7 @@
 }
 
 .icon_apple {
-  width: 1.4rem;
+  width: 1.45rem;
   height: 1.8rem;
 
   &:after {
@@ -180,9 +180,54 @@
 
 .icon_remove {
   width: 1.1rem;
-  height: 1.4rem;
+  height: 1.45rem;
+  cursor: pointer;
 
   &:after {
     background-image: data-uri('../img/icon_remove_gray.png');
+  }
+}
+
+.icon_mobile-app {
+  width: 1.7rem;
+  height: 1.7rem;
+
+  &.icon_white {
+    &:after {
+      background-image: data-uri('../img/icon_mobile_app.png');
+    }
+  }
+
+  &.icon_blue {
+    &:after {
+      background-image: data-uri('../img/icon_mobile_app_blue.png');
+    }
+  }
+}
+
+.icon_mobile-content {
+  width: 1.7rem;
+  height: 1.7rem;
+
+  &.icon_white {
+    &:after {
+      background-image: data-uri('../img/icon_mobile_content_white.png');
+    }
+  }
+
+  &.icon_blue {
+    &:after {
+      background-image: data-uri('../img/icon_mobile_content_blue.png');
+    }
+  }
+}
+
+.icon_toggle {
+  width: 2.1rem;
+  height: 1.5rem;
+  cursor: pointer;
+
+  &:after {
+    background-image: data-uri('../img/icon_toggle.png');
   }
 }
