--- a/sources/less/index.less
+++ b/sources/less/index.less
@@ -10,7 +10,7 @@
 @import 'includes/sidebar';
 @import 'includes/get_started_progress';
 @import 'includes/progress_bar';
-@import 'includes/user_pick';
+@import 'includes/pick';
 @import 'includes/menu';
 @import 'includes/menu_icon';
 @import 'includes/logout_button';
@@ -49,4 +49,4 @@
 @import 'includes/add_users';
 @import 'includes/paggination';
 @import 'includes/payment_method';
-@import 'includes/creative_list';
+@import 'includes/app_name';
