--- a/sources/less/includes/panel.less
+++ b/sources/less/includes/panel.less
@@ -99,7 +99,8 @@
   color: @gray;
 }
 
-.panel_creative {
+.panel_creatives,
+.panel_drafts {
   position: relative;
   max-width: 72rem;
   margin: 0 auto;
@@ -109,5 +110,15 @@
     font-size: 2.4rem;
     text-align: center;
     margin: 0 0 5rem;
+  }
+}
+
+.panel_drafts {
+  max-width: 60rem;
+  padding-bottom: 4rem;
+
+  .button_submit {
+    display: block;
+    margin: 5rem auto 0;
   }
 }
