--- a/sources/less/includes/form.less
+++ b/sources/less/includes/form.less
@@ -5,3 +5,18 @@
     max-width: 100%;
   }
 }
+
+.custome-devise-form {
+  p {
+    margin-bottom: 1rem;
+    color: @gray;
+  }
+
+  .field {
+    &:first-child {
+      .icon_remove {
+        display: none;
+      }
+    }
+  }
+}
