--- a/sources/less/includes/tabs.less
+++ b/sources/less/includes/tabs.less
@@ -78,6 +78,7 @@
     border: none;
     padding-top: 2.4rem;
     padding-bottom: 2.4rem;
+    text-decoration: none;
   }
 
   .tabs__item_active,
