Добавлна страница campaing bidding

--- a/sources/less/includes/base.less
+++ b/sources/less/includes/base.less
@@ -50,6 +50,12 @@ small {
   color: @gray;
 }
 
+strong {
+  &.md {
+    font-weight: 500;
+  }
+}
+
 .hide_sm {
   @media (max-width: 1200px) {
     display: none!important;
