--- a/sources/less/index.less
+++ b/sources/less/index.less
@@ -50,3 +50,4 @@
 @import 'includes/paggination';
 @import 'includes/payment_method';
 @import 'includes/app_name';
+@import 'includes/rangeslider';
