Добавлена страница campaing tracking

--- a/sources/less/includes/panel.less
+++ b/sources/less/includes/panel.less
@@ -90,6 +90,14 @@
   }
 }
 
+.panel__section_sm {
+  margin-bottom: 2rem;
+}
+
+.panel__section_md {
+  margin-bottom: 4rem;
+}
+
 .panel__footer {
   position: relative;
   margin: 2.5rem -3rem -2.5rem;
