Добавлен тултип для кнопки create app

--- a/sources/less/includes/tooltip.less
+++ b/sources/less/includes/tooltip.less
@@ -57,3 +57,21 @@
     border-color: transparent transparent @black transparent;
   }
 }
+
+.tooltip__content_left {
+  bottom: auto;
+  left: auto;
+  right: 100%;
+  top: 50%;
+  transform: translateY(-50%);
+  margin: 0 1rem 0 0;
+
+  &:after {
+    top: 50%;
+    bottom: auto;
+    left: 100%;
+    margin: -0.4rem 0 0;
+    border-width: 0.5rem 0 0.5rem 0.865rem;
+    border-color: transparent transparent transparent @black;
+  }
+}
