Добавлена страница campaing creatives

--- a/sources/less/includes/base.less
+++ b/sources/less/includes/base.less
@@ -4,6 +4,7 @@ html {
 
 body {
   font-size: 1.5rem;
+  line-height: 1.5;
   font-family: OpenSans, sans-serif;
   background: #fff;
   color: @black;
