--- a/sources/less/includes/list.less
+++ b/sources/less/includes/list.less
@@ -37,3 +37,27 @@
     margin-bottom: 3rem;
   }
 }
+
+.list_banners,
+.list_media {
+  max-height: 29rem;
+  overflow-y: auto;
+
+  .inline {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+
+  .inline__item {
+    padding-bottom: 0;
+    padding-top: 0;
+  }
+
+  img {
+    display: block;
+  }
+}
+
+.list_media {
+  max-height: 28rem;
+}
