--- a/sources/less/index.less
+++ b/sources/less/index.less
@@ -52,3 +52,5 @@
 @import 'includes/app_name';
 @import 'includes/rangeslider';
 @import 'includes/hint';
+@import 'includes/upload';
+@import 'includes/media';
