Добавлена страница campaings draft

--- a/sources/less/includes/icon.less
+++ b/sources/less/includes/icon.less
@@ -186,6 +186,12 @@
   &:after {
     background-image: data-uri('../img/icon_remove_gray.png');
   }
+
+  &.icon_black {
+    &:after {
+     background-image: data-uri('../img/icon_remove_black.png');
+    }
+  }
 }
 
 .icon_mobile-app {
@@ -229,5 +235,31 @@
 
   &:after {
     background-image: data-uri('../img/icon_toggle.png');
+  }
+}
+
+.icon_preferences {
+  width: 1.6rem;
+  height: 1.6rem;
+
+  &:after {
+    background-image: data-uri('../img/icon_preferences.png');
+  }
+}
+
+.icon_sort {
+  width: 0.55rem;
+  height: 1.1rem;
+
+  &:after {
+    background-image: data-uri('../img/icon_sort.png');
+  }
+
+  &.asc {
+    background-image: data-uri('../img/icon_sort_asc.png');
+  }
+
+  &.desc {
+    background-image: data-uri('../img/icon_sort_desc.png');
   }
 }
