--- a/sources/less/includes/button.less
+++ b/sources/less/includes/button.less
@@ -1,6 +1,7 @@
 .button {
   display: inline-block;
   box-sizing: border-box;
+  min-width: 11.5rem;
   line-height: 1;
   margin: 0;
   padding: 1rem;
@@ -100,7 +101,7 @@
 
 .button_small {
   height: 3.7rem;
-  line-height: 3.2rem;
+  line-height: 3.5rem;
   padding: 0 1.5rem;
   font-size: 1.3rem;
   font-weight: normal;
