Добавлна страница campaings creatives

--- a/sources/less/includes/media.less
+++ b/sources/less/includes/media.less
@@ -1,5 +1,13 @@
 .media {
   position: relative;
+  display: inline-block;
+  vertical-align: top;
+}
+
+.media_banner {
+  img {
+    display: block;
+  }
 }
 
 .media_video {
@@ -12,5 +20,9 @@
     height: 6.9rem;
     margin: -3.4rem 0 0 -3.4rem;
     background: url('../img/media_video.png') center center no-repeat;
+  }
+
+  img {
+    display: block;
   }
 }
