Исправлен баг в календаре

--- a/sources/less/includes/daterange.less
+++ b/sources/less/includes/daterange.less
@@ -20,14 +20,29 @@
       width: 8rem;
     }
 
-
-
     .cancelBtn,
-    .calendar .calendar-table,
-    .calendar .daterangepicker_input {
+    .calendar .calendar-table {
       opacity: 1;
-      z-index: 0;
+      z-index: 1;
       transition: opacity 0.5s ease, z-index 0s linear 0s;
+    }
+
+    .calendar {
+      &.left {
+        .daterangepicker_input {
+          right: 50%;
+          opacity: 1;
+          transition: opacity 0.5s ease, right 0s linear 0s;
+        }
+      }
+
+      &.right {
+        .daterangepicker_input {
+          left: 50%;
+          opacity: 1;
+          transition: opacity 0.5s ease, left 0s linear 0s;
+        }
+      }
     }
   }
 
@@ -160,8 +175,9 @@
       }
 
       .daterangepicker_input {
-        right: 50%;
+        right: 999999px;
         padding-right: 1rem;
+        transition: opacity 0.5s ease, right 0s linear 0.5s;
       }
     }
 
@@ -171,8 +187,9 @@
       }
 
       .daterangepicker_input {
-        left: 50%;
+        left: -99999px;
         padding-left: 1rem;
+        transition: opacity 0.5s ease, right 0s linear 0.5s;
       }
     }
 
@@ -251,9 +268,8 @@
     .daterangepicker_input {
       position: absolute;
       bottom: 2rem;
-      z-index: -1;
+      z-index: 1;
       opacity: 0;
-      transition: opacity 0.5s ease, z-index 0s linear 0.5s;
 
       input {
         height: 4rem;
