Добавлена страница campaings list

--- a/sources/less/includes/campaigns_list.less
+++ b/sources/less/includes/campaigns_list.less
@@ -17,6 +17,44 @@
   }
 }
 
+.campaigns-list_main {
+  .campaigns-list__col_status {
+    width: 8%;
+  }
+
+  .campaigns-list__col_deposits {
+    width: 10%;
+  }
+
+  .campaigns-list__col_goals {
+    width: 8%;
+  }
+
+  .campaigns-list__col_conversions {
+    width: 8%;
+  }
+
+  .campaigns-list__col_spend {
+    width: 8%;
+  }
+
+  .campaigns-list__col_ads {
+    width: 6%;
+  }
+
+  .campaigns-list__col_sources {
+    width: 9%;
+  }
+
+  .campaigns-list__col_type {
+    width: 14%;
+  }
+
+  .campaigns-list__col_tools {
+    width: 16rem;
+  }
+}
+
 .campaigns-list__section {
   display: table;
   width: 100%;
