--- a/sources/less/includes/icon.less
+++ b/sources/less/includes/icon.less
@@ -263,3 +263,21 @@
     background-image: data-uri('../img/icon_sort_desc.png');
   }
 }
+
+.icon_target {
+  width: 1.5rem;
+  height: 1.5rem;
+
+  &:after {
+    background-image: data-uri('../img/icon_target_black.png');
+  }
+}
+
+.icon_waves {
+  width: 1.5rem;
+  height: 1.3rem;
+
+  &:after {
+    background-image: data-uri('../img/icon_waves_black.png');
+  }
+}
