Добавлна страница campaings table

--- a/sources/less/includes/table.less
+++ b/sources/less/includes/table.less
@@ -90,6 +90,13 @@
   }
 }
 
+.table_data_sm {
+  th, td {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+}
+
 .table_data_flat {
   td {
     padding: 1rem 0.5rem;
