--- a/sources/less/includes/checkbox.less
+++ b/sources/less/includes/checkbox.less
@@ -17,6 +17,39 @@
   }
 }
 
+.checkbox_radio {
+  .checkbox__ctrl {
+    position: relative;
+    margin: 0;
+    width: 2.5rem;
+    height: 1.5rem;
+    border-radius: 1.5rem;
+    background: @gray;
+    box-shadow: inset 0 0 3px rgba(0,0,0,0.1);
+
+    &:after {
+      content: '';
+      position: absolute;
+      top: 0.1rem;
+      left: 0.1rem;
+      height: 1.3rem;
+      width: 1.3rem;
+      border-radius: 1.3rem;
+      background: #fff;
+    }
+  }
+
+  input {
+    &:checked + .checkbox__content .checkbox__ctrl {
+      background: @green;
+      &:after {
+        left: auto;
+        right: 0.1rem;
+      }
+    }
+  }
+}
+
 .checkbox__field-data {
   &:extend(.field__data);
   position: relative;
