--- a/sources/less/includes/tabs.less
+++ b/sources/less/includes/tabs.less
@@ -1,5 +1,6 @@
 .tabs {
   display: inline-block;
+  vertical-align: middle;
   overflow: hidden;
   line-height: 1;
   border: 1px solid @gray;
@@ -32,11 +33,16 @@
   float: left;
   box-sizing: border-box;
   min-width: 7rem;
-  padding: 1rem 1.5rem;
+  padding: 1.13rem 1.5rem;
   text-align: center;
   border-right: 1px solid @gray;
   cursor: pointer;
   transition: all 0.2s ease;
+  text-decoration: none;
+
+  a& {
+    text-decoration: none;
+  }
 
   &:hover {
     background: #f5f5f5;
