--- a/sources/less/index.less
+++ b/sources/less/index.less
@@ -46,7 +46,7 @@
 @import 'includes/tags';
 @import 'includes/cursor';
 @import 'includes/form';
-@import 'includes/add_users';
+@import 'includes/add';
 @import 'includes/paggination';
 @import 'includes/payment_method';
 @import 'includes/app_name';
