Добавлена верстка валидации полей

--- a/sources/less/includes/list.less
+++ b/sources/less/includes/list.less
@@ -61,3 +61,9 @@
 .list_media {
   max-height: 28rem;
 }
+
+.list_checkboxs {
+  position: relative;
+  overflow-y: auto;
+  max-height: 16.5rem;
+}
