--- a/sources/less/includes/field.less
+++ b/sources/less/includes/field.less
@@ -1,4 +1,5 @@
 .fields {
+  position: relative;
   margin: 0 0 2rem;
 
   &:last-child {
@@ -171,4 +172,57 @@
   .checkbox__ctrl {
     margin-right: 0.5rem;
   }
+}
+
+.field_fail {
+  .field__data,
+  .select2-container--default .select2-selection--single,
+  .select2-container .select2-selection--multiple {
+    border-color: #fdaed1;
+  }
+}
+
+.field__error {
+  position: absolute;
+  left: 100%;
+  top: 50%;
+  transform: translateY(-50%);
+  padding: 1.45rem;
+  margin-left: 2rem;
+  font-size: 1.2rem;
+  white-space: nowrap;
+  border-radius: 0.8rem;
+  background: @black;
+  color: #fdaed1;
+
+  @media(max-width: 1100px) {
+    position: static;
+    margin: 0;
+    padding: 0;
+    background: none;
+
+    &:after {
+      display: none;
+    }
+
+    br {
+      display: none;
+    }
+  }
+
+  &:after {
+    content: '';
+    position: absolute;
+    right: 100%;
+    top: 50%;
+    margin: -0.4rem 0 0;
+    border-style: solid;
+    border-width: 0.5rem 0.865rem 0.5rem 0;
+    border-color: transparent @black transparent transparent;
+  }
+}
+
+.field__error_fixed {
+  width: 25rem;
+  white-space: normal;
 }
