Добавлен раздел audience

--- a/sources/less/includes/field.less
+++ b/sources/less/includes/field.less
@@ -166,6 +166,15 @@
   font-size: 1.5rem;
 }
 
+.field__label_tin {
+  font-weight: normal;
+  color: @gray;
+}
+
+.field__label_normal {
+  font-weight: normal;
+}
+
 .field__checkboxs {
   margin: 1rem 0;
 
