--- a/sources/less/includes/icon.less
+++ b/sources/less/includes/icon.less
@@ -49,6 +49,23 @@
       background-image: data-uri('../img/icon_plus_blue.png');
     }
   }
+
+  &.icon_green {
+    &:after {
+      background-image: data-uri('../img/icon_plus_green.png');
+    }
+  }
+}
+
+.icon_plus-lg {
+  width: 2.4rem;
+  height: 2.4rem;
+
+  &.icon_green {
+    &:after {
+      background-image: data-uri('../img/icon_plus_green_lg.png');
+    }
+  }
 }
 
 .icon_tooltip {
@@ -122,6 +139,12 @@
 .icon_cursor {
   width: 0.9rem;
   height: 0.9rem;
+}
+
+.icon_cursor_up {
+  &:after {
+    background-image: data-uri('../img/icon_cursor_up.png');
+  }
 }
 
 .icon_cursor_right {
@@ -279,5 +302,14 @@
 
   &:after {
     background-image: data-uri('../img/icon_waves_black.png');
+  }
+}
+
+.icon_search {
+  width: 1.4rem;
+  height: 1.5rem;
+
+  &:after {
+    background-image: data-uri('../img/icon_search.png');
   }
 }
