--- a/sources/less/includes/menu_icon.less
+++ b/sources/less/includes/menu_icon.less
@@ -133,3 +133,65 @@
     background-image: data-uri('../img/icon_campaings_blue.png');
   }
 }
+
+.menu-icon_insights {
+  width: 2.7rem;
+  height: 2rem;
+
+  &:after {
+    background-image: data-uri('../img/icon_insights.png');
+  }
+
+  &:before {
+    background-image: data-uri('../img/icon_insights_blue.png');
+  }
+}
+
+.menu-icon_segments {
+  &:after {
+    background-image: data-uri('../img/icon_segments.png');
+  }
+
+  &:before {
+    background-image: data-uri('../img/icon_segments_blue.png');
+  }
+}
+
+.menu-icon_events {
+  width: 2.1rem;
+  height: 2.2rem;
+
+  &:after {
+    background-image: data-uri('../img/icon_events.png');
+  }
+
+  &:before {
+    background-image: data-uri('../img/icon_events_blue.png');
+  }
+}
+
+.menu-icon_ad-rules {
+  width: 2.3rem;
+  height: 1.4rem;
+
+  &:after {
+    background-image: data-uri('../img/icon_ad_rules.png');
+  }
+
+  &:before {
+    background-image: data-uri('../img/icon_ad_rules_blue.png');
+  }
+}
+
+.menu-icon_audience-attribution {
+  width: 2.2rem;
+  height: 1.9rem;
+
+  &:after {
+    background-image: data-uri('../img/icon_audience_attribution.png');
+  }
+
+  &:before {
+    background-image: data-uri('../img/icon_audience_attribution_blue.png');
+  }
+}
