--- a/sources/less/index.less
+++ b/sources/less/index.less
@@ -55,3 +55,8 @@
 @import 'includes/upload';
 @import 'includes/media';
 @import 'includes/campaigns_list';
+@import 'includes/app_blocks.less';
+@import 'includes/app_info.less';
+@import 'includes/dropdown.less';
+@import 'includes/rule.less';
+@import 'includes/rule_form.less';
