--- a/sources/less/includes/add.less
+++ b/sources/less/includes/add.less
@@ -14,6 +14,15 @@
   background-image: url('../img/add_users.png');
 }
 
+.add_audience {
+  margin-top: 10rem;
+  background-image: url('../img/add_audience.png');
+
+  .add__title {
+    color: @black;
+  }
+}
+
 .add_campaing {
   position: absolute;
   top: 50%;
@@ -28,5 +37,15 @@
   margin: 0 0 4rem;
   font-weight: normal;
   font-size: 2rem;
+  color: @gray;
+}
+
+.add__title_with-text {
+  margin-bottom: 1rem;
+}
+
+.add__text {
+  margin: 0 0 3rem;
+  font-size: 1.4rem;
   color: @gray;
 }
