--- a/sources/less/includes/grid.less
+++ b/sources/less/includes/grid.less
@@ -14,6 +14,12 @@
   }
 }
 
+.grid_size_3 {
+  .grid__section {
+    width: 33.33333%;
+  }
+}
+
 .grid_size_2 {
   .grid__section {
     width: 50%;
